<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="devferrarizero.my_reminder.CalendarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_main"
        android:id="@+id/tv_title_main"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendarView"
        android:layout_below="@+id/tv_title_main"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back1"
            android:id="@+id/btn_back1"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/tv_title_main"
            android:layout_alignEnd="@+id/tv_title_main"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:id="@+id/btn_next"
            android:layout_alignTop="@+id/btn_back1"
            android:layout_alignLeft="@+id/calendarView"
            android:layout_alignStart="@+id/calendarView"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
